--- a/src/Components/CheckoutPage/Buynowcontainer/Buynow.css
+++ b/src/Components/CheckoutPage/Buynowcontainer/Buynow.css
@@ -29,4 +29,19 @@
     margin-left: 20px;
     font-weight: bold;
     color: green;
+    cursor: pointer;
+}
+.emptycontainer{
+    width: 205px;
+    height: 30px;
+    background-color: #c7c4c0;
+    color: red;
+    font-weight: bolder;
+    border-radius: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: auto;
+    margin-top: 40px;
+    cursor: pointer;
 }
